# aami

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README-dev.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: __init__.py  audit.py  auth.py  items.py  ot_links.py  search.py  user.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  audit_log.py  item.py  ot_link.py  user.py
backend/app/schemas/: auth.py  item.py  ot_link.py  user.py
backend/app/services/: audit.py
backend/app/tests/: test_auth_items.py  test_health.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: basic.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/layout/: Layout.tsx
frontend/src/crypto/: crypto.test.ts  crypto.ts
frontend/src/pages/: LoginPage.tsx  OTViewPage.tsx  RegisterPage.tsx  SettingsPage.tsx  VaultPage.tsx
frontend/src/state/: SessionProvider.tsx
